feat(#416): Adding bulk curation feature and updated swagger doc with its new endpoint
