# resfulservice/src/api-docs/swagger-service.yaml
@@ -367,6 +367,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Successful-Curation'
+
         '400':
           description: If user doesn't upload master template xlsx file
           content:
@@ -405,7 +406,7 @@ paths:
               schema:
                 type: object
                 example:
-                    message: 'This has already been curated'
+                    message: 'This had been curated already'
         '500':
           description: Internal Server Error
           content:
@@ -438,14 +439,14 @@ paths:
               type: object
               properties:
                 payload:
-                  $ref: '#/components/schemas/Successful-Curation'
+                  $ref: '#/components/schemas/Sample-Curation'
       responses:
         '200':
           description: Returns the newly curated object
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Successful-Curation'
+                $ref: '#/components/schemas/Sample-Curation'
 
         '304': 
           description: No changes to the curation object to update
@@ -485,7 +486,78 @@ paths:
                   message:
                     type: string
                     example: An error occurred
-  /curate/get{xmlId}/{xlsxObjectId}:
+    delete:
+      security:
+        - BearerAuth: []
+      summary: Deletes a curation or list of curations
+      description: A route to delete a  single curation or list of curations with similar datasetID
+      tags:
+        - Curation
+      parameters:
+        - in: query
+          name: xlsxObjectId
+          schema:
+            type: string
+          description: the id of the curation to delete
+        - in: query
+          name: dataset
+          schema:
+            type: string
+          description: Dataset ID linked to multiple curations
+      responses:
+        '200':
+          description: Returns a success message for deleting curations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    enum: ['Curated sample ID: 6475c82ffbeb8571b77a5991 successfully deleted', 'Curated Samples with Dataset ID: 583e3d6ae74a1d205f4e3fd3 successfully deleted']
+                
+        '400':
+          description: Bad user input
+          content:
+            application/json:
+              schema:
+                type: object
+                example: 
+                  success: false
+                  message: validation error
+                  data:
+                    - value: '231543536'
+                      msg: invalid xlsx object id
+                      param: dataset
+                      location: query
+        '401':
+          description: User not authorized for this service
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Unauthorized-Error'
+        '404':
+          description: Curation not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                      message:
+                        type: string
+                        enum: ['Curation sample not found', '`Dataset ID: 583e3d6ae74a1d205f4e3fd3 not found`']
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: An error occurred
+  
+  /curate/get:
     get:
       security:
         - BearerAuth: []
@@ -495,22 +567,22 @@ paths:
         - Curation
       parameters:
         - name: xlsxObjectId
-          in: path
-          schema:
-            type: string
+          in: query
           description: The ID of the curated data to return for editing
-        - name: xmlId
-          in: path
           schema:
             type: string
+        - name: xmlId
+          in: query
           description: Alternatively the ID of the xml to return for editing
+          schema:
+            type: string
       responses:
         '200':
           description: Returns the newly curated object
           content:
             application/json:
               schema:
-                 $ref: '#/components/schemas/Successful-Curation'
+                 $ref: '#/components/schemas/Sample-Curation'
 
         '401':
           description: User not authorized for this service
@@ -528,6 +600,86 @@ paths:
                       message:
                         type: string
                         enum: ['Curation sample not found', 'Sample xml not found']
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: An error occurred
+  
+  /curate/bulk:
+     post:
+      security:
+        - BearerAuth: [] 
+      summary: Creates bulk curations
+      description: Creates multiple curations that are uploaded puts in separates folders uploaded in a zip file
+      tags:
+        - Curation
+      parameters:
+        - in: query
+          name: dataset
+          schema:
+            type: string
+          description: Dataset ID
+      requestBody:
+        description: A payload that contains zip file which holds all the files for separate curations in individual folders
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                uploadfile:
+                  type: array
+                  items:
+                    type: string
+                    format: binary
+      responses:
+        '201':
+          description: Returns the newly curated object
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  bulkCurations:
+                    type: object
+                    properties:
+                      root:
+                        $ref: '#/components/schemas/Successful-Curation'
+                      'Li984jna9':
+                        $ref: '#/components/schemas/Successful-Curation'
+                  bulkErrors:
+                    type: object
+                    example:
+                      "Ls-94k-askd":
+                        "real_permittivity.csv": "file not uploaded"
+                        "loss_permittivity.csv": "file not uploaded"
+                        "tan_delta.csv": "file not uploaded"
+                        "weibull.csv": "file not uploaded"
+                        
+        '400':
+          description: If user doesn't upload master template xlsx file
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                      message:
+                        type: string
+                        enum: ['Missing dataset ID in query', 'bulk curation zip file not uploaded']
+
+        '401':
+          description: User not authorized for this service
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Unauthorized-Error'
+  
         '500':
           description: Internal Server Error
           content:
@@ -563,13 +715,28 @@ components:
         message:
           type: string
           example: Category type or doc is missing
+          
     Successful-Curation:
       type: object
       example: 
-        xml: "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n  <PolymerNanocomposite>\n  <ID>S10</ID>\n  <Control_ID>S28</Control_ID>\n  <DATA_SOURCE>\n    <Citation>\n      <CommonFields>\n        <YourName>Tolulomo Fateye</YourName>\n        <YourEmail>tolulomo@toluconsulting.com</YourEmail>\n        <Origin>experiments</Origin>\n        <CitationType>lab-generated</CitationType>\n        <Author>Aditya Shanker Prasad</Author>\n        <Author>Gbolahan Adeleke</Author>\n        <URL>https://search.proquest.com/openview/eb63d4d6b84b1252971b3e3eec53b97c/1?pq-origsite=gscholar&cbl=51922&diss=y</URL>\n        <Location>Rensselaer Polytechnic Institute</Location>\n      </CommonFields>\n    </Citation>\n  </DATA_SOURCE>\n   </PolymerNanocomposite>\n"
+        xml: "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n  <PolymerNanocomposite>\n  <ID>S10</ID>\n  <Control_ID>S28</Control_ID>\n  <DATA_SOURCE>\n    <Citation>\n      <CommonFields>\n        <YourName>John Smith</YourName>\n        <YourEmail>jonsmith@nomail.org</YourEmail>\n        <Origin>experiments</Origin>\n        <CitationType>lab-generated</CitationType>\n        <Author>Aditya Shanker Prasad</Author>\n        <Author>John Doe</Author>\n        <URL>https://search.proquest.com/openview/eb63d4d6b84b1252971b3e3eec53b97c/1?pq-origsite=gscholar&cbl=51922&diss=y</URL>\n        <Location>Rensselaer Polytechnic Institute</Location>\n      </CommonFields>\n    </Citation>\n  </DATA_SOURCE>\n   </PolymerNanocomposite>\n"
         user:
           _id: "643931cc6f44b02f01380f7a"
           displayName: "Test"
         groupId: "583e3d6ae74a1d205f4e3fd3"
         isApproved: false,
         status: "Editing"
+        
+    Sample-Curation:
+      type: object
+      example: 
+        data origin:
+          YourName: Akash Prasad
+          YourEmail: akash@prasad.com
+          ID: S10
+          Control_ID: S28
+          Origin: experiments
+          Citation Type: lab-generated
+          Author: Aditya Shanker Prasad
+          URL: https://search.proquest.com/openview/eb63d4d6b84b1252971b3e3eec53b97c/1?pq-origsite=gscholar&cbl=51922&diss=y
+          Location: Rensselaer Polytechnic Institute
